--- a/source/theme.scss
+++ b/source/theme.scss
@@ -285,8 +285,7 @@ html ::-webkit-scrollbar-thumb:hover {
       }
     }
   }
-  .block-ref {
-    padding: 2px 5px;
+  .block-ref{
     border-radius: 3px;
     font-style: italic;
     color: var(--ls-primary-text-color);
